panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__struct__test_forward_declaration_without_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/struct/test_forward_declaration_without_declarator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_forward_declaration_without_declarator.c"
   (function-definition external stack-size=24
      (f1~1 `fn() -> void` (static f1))
      (compound-statement
         (definition (p1~3 `ptr<struct T~0>` @0) ∅)
         (definition (p2~4 `ptr<struct T~0>` @8) ∅)))
   (function-definition external stack-size=24
      (f2~5 `fn() -> void` (static f2))
      (compound-statement
         (definition (p1~7 `ptr<struct T~0>` @0) ∅)
         (definition (p2~8 `ptr<struct T~0>` @8) ∅)))
   (function-definition external stack-size=24
      (forward_decl_in_local_scope~9 `fn() -> void` (static forward_decl_in_local_scope))
      (compound-statement
         (compound-statement
            (definition (p1~12 `ptr<struct U~11>` @0) ∅)
            (definition (p2~13 `ptr<struct U~11>` @8) ∅))
         (compound-statement
            (definition (p1~14 `ptr<struct U~11>` @0) ∅)
            (definition (p2~15 `ptr<struct U~11>` @8) ∅)))))

----- stderr -----
