panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__struct__test_struct_types_forward_declared_in_different_scopes_are_distinct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/struct/test_struct_types_forward_declared_in_different_scopes_are_distinct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_struct_types_forward_declared_in_different_scopes_are_distinct.c"
   (function-definition external stack-size=24
      (f1~0 `fn() -> void` (static f1))
      (compound-statement
         (definition (p1~2 `ptr<struct T~1>` @0) ∅)
         (definition (p2~3 `ptr<struct T~1>` @8) ∅)))
   (function-definition external stack-size=24
      (f2~4 `fn() -> void` (static f2))
      (compound-statement
         (definition (p1~6 `ptr<struct T~5>` @0) ∅)
         (definition (p2~7 `ptr<struct T~5>` @8) ∅))))

----- stderr -----
